Add CI, add fat jar